--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "1.3.1",
     "@vercel/functions": "^3.1.0",
+    "next-auth": "5.0.0-beta.29",
     "@types/react-syntax-highlighter": "^15.5.13",
     "react-syntax-highlighter": "^15.6.6",
     "autoprefixer": "^10.4.20",
